--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/assets/css/Bootstrap/bootstrap.min.css">
+  <style type="text/css">
+	@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+	@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+  </style>
 </head>
 <body>
   <app-root></app-root>
