--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="/assets/css/Bootstrap/bootstrap.min.css">
+  <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <style type="text/css">
 	@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 	@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
