Added PWA support

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,18 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="fav-icon.ico">
   <link rel="stylesheet" type="text/css" href="/assets/css/Bootstrap/bootstrap.min.css">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <style type="text/css">
 	@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 	@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
   </style>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
