Refactoring + fixed bugs

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,16 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/Bootstrap/bootstrap.min.css">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <style type="text/css">
-	@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
-	@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+	 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+	 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+	 @import url('https://fonts.googleapis.com/css?family=Comic+Neue&display=swap');
+	 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
+     body
+     {
+        overscroll-behavior-y: contain;
+     }
+
   </style>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
